log
Fri 21 Mar 2025 03:03:22 AM UTC: 
 exercises.c | 44 ++++++++++++++++++++++++++++++++++++++++----
 1 file changed, 40 insertions(+), 4 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:11: error: too few arguments to function ‘pushFront’
   57 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
In file included from exercises.c:6:
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:11: error: too few arguments to function ‘pushFront’
   80 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
Compilation failed
3f6cb15
Fri 21 Mar 2025 03:03:25 AM UTC: 
In file included from test.c:5:
exercises.c: In function ‘sumaLista’:
exercises.c:57:11: error: too few arguments to function ‘pushFront’
   57 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
In file included from exercises.c:6:
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
exercises.c: In function ‘eliminaElementos’:
exercises.c:80:11: error: too few arguments to function ‘pushFront’
   80 |     aux = pushFront(Lista);
      |           ^~~~~~~~~
arraylist.h:17:6: note: declared here
   17 | void pushFront(List *L, void *dato);
      |      ^~~~~~~~~
Compilation failed
d66bab6
Fri 21 Mar 2025 03:05:02 AM UTC: 
 exercises.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘copia_pila’:
exercises.c:103:9: error: ‘Pilaaux’ may be used uninitialized [-Werror=maybe-uninitialized]
  103 |         push(Pilaaux, aux);
      |         ^~~~~~~~~~~~~~~~~~
exercises.c:98:12: note: ‘Pilaaux’ was declared here
   98 |     Stack* Pilaaux;
      |            ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
131c082
